--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "element-plus": "^2.1.4",
+    "node-schedule": "^2.1.0",
     "pinia": "^2.0.12",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
