feat:待办事项基础开发完成

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,10 @@
     "src/**/*.vue",
     "src/**/*.d.ts",
     "tests/**/*.ts",
-    "tests/**/*.tsx"
+    "tests/**/*.tsx",
+    "types/**/*.d.ts",
+    "components.d.ts",
+    "auto-imports.d.ts"
   ],
   "exclude": ["node_modules"]
 }
