--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "electron:build": "vue-cli-service electron:build",
-    "electron:serve": "vue-cli-service electron:serve",
+    "electron:build": "vue-cli-service electron:build ",
+    "electron:serve": "vue-cli-service electron:serve --mode local",
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps"
   },
   "main": "background.js",
   "dependencies": {
     "core-js": "^3.8.3",
+    "dayjs": "^1.11.0",
     "element-plus": "^2.1.4",
     "node-schedule": "^2.1.0",
     "pinia": "^2.0.12",
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@element-plus/icons-vue": "^1.1.3",
     "@types/electron-devtools-installer": "^2.2.0",
+    "@types/node-schedule": "^1.3.2",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
