feat:增加关闭提示窗的功能

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-
-VUE_APP_ICON_PATH = "D:/vscode/node/electron_demo/public/favicon.ico"
+IS_TEST = true
+VUE_APP_ICON_PATH = "D:/repo/electron_demo/public/favicon.ico"
