--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "element-plus": "^2.1.4",
     "node-schedule": "^2.1.0",
     "pinia": "^2.0.12",
+    "pinia-plugin-persist": "^1.0.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "wangeditor": "^4.7.12"
